--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "chai": "^4.2.0",
     "mocha": "^8.1.3",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.2",
-    "typings": "^2.1.1"
+    "typescript": "^4.0.2"
   }
 }
