--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/lib.js",
   "scripts": {
     "build": "./node_modules/typescript/bin/tsc",
+    "doc": "./node_modules/typedoc/bin/typedoc --out ./doc ./src",
     "test": "./node_modules/mocha/bin/mocha -r ts-node/register test/*.test.ts"
   },
   "repository": {
@@ -23,6 +24,7 @@
     "chai": "^4.2.0",
     "mocha": "^8.1.3",
     "ts-node": "^9.0.0",
+    "typedoc": "^0.19.2",
     "typescript": "^4.0.2"
   }
 }
