--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "rusty-ts",
   "version": "0.0.1",
-  "description": "Rust-like Option, Result and Iterator adapter types",
-  "main": "dist/lib.js",
+  "description": "Rust-like Option, Result types",
   "scripts": {
     "build": "./node_modules/typescript/bin/tsc",
+    "postinstall": "./node_modules/typescript/bin/tsc",
     "doc": "./node_modules/typedoc/bin/typedoc --out ./doc ./src",
     "test": "./node_modules/mocha/bin/mocha -r ts-node/register test/*.test.ts"
   },
@@ -19,12 +19,12 @@
   },
   "homepage": "https://github.com/oliver-giersch/rusty-ts#readme",
   "devDependencies": {
-    "@types/chai": "^4.2.12",
-    "@types/mocha": "^8.0.3",
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.0.4",
     "chai": "^4.2.0",
-    "mocha": "^8.1.3",
+    "mocha": "^8.2.1",
     "ts-node": "^9.0.0",
     "typedoc": "^0.19.2",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.5"
   }
 }
