--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "module": "commonjs",
         "declaration": true,
         "target": "ES6",
-        "outDir": "./build",
+        "outDir": "./lib",
         "sourceMap": true,
         "strict": true,
         "noFallthroughCasesInSwitch": true,
@@ -11,7 +11,7 @@
         "noImplicitThis": true
     },
     "exclude": [
-        "./build",
+        "./lib",
         "./test/*.test.ts"
     ]
 }
