adds main and types fields

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "rusty-ts",
   "version": "0.0.1",
   "description": "Rust-like Option, Result types",
+  "main": "./lib/lib.js",
+  "types": "./lib/lib.d.ts",
   "scripts": {
     "build": "./node_modules/typescript/bin/tsc --declaration",
     "doc": "./node_modules/typedoc/bin/typedoc --out ./doc ./src",
